ssphd/assets/css/style.css
/* ... */
nav ul > li > ul > li > ul > li > a.current {
    border-left: 2px solid var(--color-main);
    padding-left: calc(var(--space-s) - 1px);
}


.toc-section-number {
    display: inline-block;
}

/* nav numbers hangin */
/* nav a > .toc-section-number {
    margin-left: calc(0px - var(--space-ml));
    display: inline-block;
    width: var(--space-ml);
} */

footer {
    padding-top: var(--space-ml);
    border-top: 1px solid var(--color-midgray);
    margin-bottom: var(--space-xh);
    color: var(--color-darkgray);
    width: calc(var(--sidebar-width) - var(--sidebar-margin-left) - var(--sidebar-margin-right));
}

.buttons-top {
    margin-left: var(--content-margin-left);
    margin-right: var(--content-margin-right);
    display: flex;
    align-items: center;
    margin-bottom: var(--space-l);
    font-family: var(--sans);
    font-size-adjust: var(--scale-inter-to-source-serif);
    font-size: var(--font-size-s);
    font-variant-numeric: tabular-nums;
    display: flex;
    font-size: var(--font-size-s);
    gap: var(--space-s);
    z-index: 2;
}

.buttons-right {
    margin-left: auto;
    position: fixed;
    top: var(--content-margin-top);
    right: calc(var(--content-margin-right) - 2*var(--space-ml));
    flex-direction: column;
    padding: 2px;
    width: var(--buttons-thickness);
    border: none;
    font-size: var(--font-size-ms);
    gap: var(--space-xs);
}

#light-dark-switch, .burger {
    font-size: var(--font-size-m);
}

.buttons-top > * {
    border: 1px solid var(--color-lightgray);
    border-radius: 50ch;
    display: flex;
    padding: 2px;
    background-color: var(--background-blur);
}

.buttons-right {
    border: none;
    background-color: transparent;
}

.buttons-top .breadcrumbs {
    height: var(--buttons-thickness);
    overflow-y: auto;
}

.buttons-right > *, .buttons-top .burger > * {
    height: calc(var(--buttons-thickness) - 6px);
    width: calc(var(--buttons-thickness) - 6px);
}

.buttons-top > * > * {
    display: flex;
    flex-grow: 0;
    flex-shrink: 0;
    align-items: center;
    text-decoration: none;
    border-radius: 50ch;
    padding: var(--space-xs);
    justify-content: space-around;
    color: var(--color-darkgray);
}

.buttons-top .separator {
    padding: 0px 2px;
    color: var(--color-midgray);
}

.buttons-top a:hover, .buttons-top button:hover {
    background-color: var(--color-lightergray);
    color: var(--color-main);
}

.burger > *, .buttons-right > * {
    padding: 0px;
}

.burger {
    display: none;
}

button {
    background-color: transparent;
}

button:hover {
    /* background-color: var(--color-lightergray); */
    cursor: pointer;
}

main > section,
.bottom {
    margin-left: var(--content-margin-left);
    width: var(--section-width);
}

.bottom {
    margin-top: var(--space-h);
    padding-top: var(--space-m);
    margin-bottom: var(--space-xh);
    font-family: var(--sans);
    font-size-adjust: var(--scale-inter-to-source-serif);
}

.prevnext {
    display: flex;
    align-items: stretch;
    gap: var(--space-s);
}

.prevnext .pager {
    height: var(--space-m);
    width: 100%;
    height: auto;
    border: 1px solid var(--color-lightergray);
    background-color: var(--color-lightergray);
    padding: var(--space-xs) var(--space-s) var(--space-s) var(--space-s);
    border-radius: var(--border-radius-s);
    line-height: var(--table-line-height);
    text-decoration: none;
    font-size: var(--font-size-ms);
    font-variant-numeric: tabular-nums;
    font-weight: 500;
    max-width: calc(50% - var(--space-s)/2)
}

.prevnext .pager:hover {
    border: 1px solid var(--color-main);
    cursor: pointer;
    background-color: var(--color-lightergray);
}

.prevnext .next {
    margin-left: auto;
    text-align: right;
}

.prevnext .pager .prefix {
    display: block;
    font-size: var(--font-size-xs);
    color: var(--color-darkergray);
    text-transform: uppercase;
    font-weight: bold;
    letter-spacing: .05rem;
    margin-bottom: var(--space-xxs);
}

a {
    color: inherit;
    text-decoration: underline;
    text-decoration-color: var(--color-darkgray);
    text-decoration-thickness: 1px;
    text-decoration-skip-ink: all;
    text-underline-offset: .15em;
}

a:hover {
    color: var(--color-main);
    text-decoration-color: var(--color-main);
}

a.external::after {
    font-family: var(--sans);
    font-size-adjust: var(--scale-inter-to-source-serif);
    content: "↗";
    line-height: var(--note-line-height);
    vertical-align: top;
    font-size: var(--font-size-s);
    color: var(--color-darkgray);
    font-weight: normal;
}

a.external:hover::after {
    color: var(--color-main);
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: var(--sans);
    font-size-adjust: var(--scale-inter-to-source-serif);
    line-height: var(--title-line-height);
    display: flex;
    letter-spacing: -0.06rem;
}

.header-section-number {
    font-variant-numeric: tabular-nums;
    margin-right: .5em;
}

h1 {
    font-size: var(--font-size-chapter);
    margin-bottom: var(--space-xl);
    width: var(--title-width);
    font-weight: 800;
}

h2 {
    font-size: var(--font-size-section);
    font-weight: 500;
    margin-bottom: var(--space-l);
    width: var(--title-width);
}

h3 {
    font-size: var(--font-size-ml);
    /* margin-bottom: var(--space-xxs); */
    margin-bottom: var(--space-m);
    margin-top: var(--space-l);
}

h4 {
    font-weight: 500;
    margin-bottom: var(--space-s);
}

h5, h6 {
    float: left;
    display: block;
    margin: 0;
    font-size: var(--base-font-size);
    position: relative;
    line-height: var(--base-line-height);
    font-family: var(--serif);
    font-weight: normal;
    font-size-adjust: none
}

h5 {
    font-style: italic;
}

h5::after {
    font-style: normal;
    content: "\00A0\00A0\00B7\00A0\00A0" ;
}

h6::after {
    font-style: normal;
    content: ".\00A0" ;
}

p {
    margin-bottom: var(--space-m);
    /* text-align: justify; */
}
/* ... */

